<resources>
    <string name="app_name">Motorsport Spotter</string>
    <string name="page_title">Home</string>
    <string name="events">Events</string>
    <string name="news">News</string>
    <string name="discover">Discover</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_followed_events">Your Followed Events</string>
    <string name="your_followed_tracks">Your Followed Tracks</string>
    <string name="your_followed_championships">Your Followed Championships</string>
    <string name="event_thumbnail">Event Thumbnail</string>
    <string name="tab_layout_desc">Events fragments</string>
    <string name="favourites">Favourites</string>
    <string name="event_image">Event image</string>
    <string name="championship_image">Championship image</string>
    <string name="championship_logo">championship logo</string>
    <string name="set_favourite">Set favourite</string>
    <string name="track_background">Track background</string>
    <string name="track_logo">Track logo</string>
    <string name="event_icon">Event icon</string>
    <string name="info">Info</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu blandit magna. Nam sagittis, lorem sed tempus mattis, nibh metus mattis arcu, feugiat iaculis dui justo ut urna. Sed vehicula, dui eget gravida sodales, turpis orci rhoncus lectus, eget tempor dui sapien nec neque. Vestibulum mauris nunc, iaculis in varius ut, maximus eleifend enim. Donec a ex tristique, imperdiet nulla ac, placerat arcu.</string>
    <string name="follow">Follow</string>
    <string name="similar_events">Similar Events</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="ongoing_events">Ongoing Events</string>
    <string name="future_events">Future Events</string>
    <string name="past_events">Past Events</string>
    <string name="incoming_events">Incoming Events</string>
    <string name="suggested_championships">Suggested Championships</string>
    <string name="suggested_tracks">Suggested Tracks</string>
    <string name="unfollow">Unfollow</string>
    <string name="about_this_championship">About This Championship</string>
    <string name="about_this_track">About This Track</string>
    <string name="share">Share</string>
    <string name="running_now">running now</string>
    <string name="live_icon">live icon</string>
    <string name="watch_it_here">Watch it Here!</string>
    <string name="news_image">news image</string>
    <string name="test_subtitle">Leclerc davanti a Sainz di quattro millesimi riportano la Scuderia a essere ottimista dopo le prove del venerdì a Zandvoort, ma a Maranello non credono alla giornata storta della Red Bull che è rimasta molto nascosta con Verstappen solo ottavo. C\'è chi scommette che Milton Keynes abbia lavorato pensando al futuro e domani vedremo il vero potenziale delle RB18. Giornata positiva anche per la Mercedes molto vicina alle rosse con Hamilton: \"Ma in qualifica non abbiamo speranze\", spiega Lewis.</string>
    <string name="test_content">I riscontri emersi oggi a Zandvoort dicono altro, ma prima delle analisi del caso è necessaria una premessa: Verstappen non si è visto. O forse, non si è voluto far vedere, in parte per cause di forza maggiore (un problema al cambio che lo ha bloccato al via della sessione FP1), in parte con il programma di lavoro della sessione FP2, che non ha consentito all’olandese di completare un secondo giro veloce dopo un primo tentativo non andato a segno per problemi di traffico. La classifica della sessione FP2 vede Max in un’ottava posizione che non dice nulla sul suo reale potenziale.  “Abbiamo perso tempo prezioso nella FP1 – ha commentato Max – ed anche il bilanciamento non è stato eccezionale nella sessione FP2. In un turno di un’ora non si ha la possibilità di cambiare molto sulla macchina, quindi abbiamo dovuto fare i conti con quello che avevamo. Oggi non è stata una giornata eccezionale, ma daremo un\'occhiata a tutto durante la notte, di sicuro possiamo fare di meglio rispetto a quanto visto nelle prime due sessioni di prove libere”.  Vedremo domani, ed anche se Verstappen resta il favorito sia per la caccia alla pole che in vista dei settantadue giri in programma domenica, ci sono comunque i riscontri di giornata, numeri che riportano il sorriso nel box della Ferrari ed anche nell’adiacente garage Mercedes.  Il tutto in un pomeriggio in cui un blackout dei sistemi informativi generali hanno costretto le squadre a lavorare senza Gps e con molti meno dati del solito. “Non siamo ancora molto certi della bontà del nostro long-run – ha spiegato George Russell – dovremo rivedere tutto perché non avevamo la schermata dei tempi”.</string>
    <string name="news_title">News</string>
    <string name="nearby_events_icon">nearby events icon</string>
    <string name="events_near_me">Events near me</string>
    <string name="events_near_you">Events near you</string>
    <string name="home">Home</string>
    <string name="championships">Championships</string>
    <string name="tracks">Tracks</string>
</resources>