<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="news"
            type="com.example.motorsportspotter.components.recyclerviews.entities.News" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.news.NewsDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:text="@{news.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:text="F1 | Ferrari torna a essere solida, ma la Red Bull è finta" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                imageUrl="@{news.image}"
                tools:src="@drawable/audi_gtwc"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:contentDescription="@string/news_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="7dp"
                android:text="@{news.author}"
                android:textStyle="bold|italic"
                tools:text="Roberto Chinchero" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@{news.subtitle}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/test_subtitle" />

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="30dp"
                android:text="@{news.content}"
                android:textSize="18sp"
                tools:text="@string/test_content" />

        </LinearLayout>
    </ScrollView>
</layout>